--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>Felaria Tamedia</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <style>
-        /* Style CSS here */
          /* Style CSS here */
          body {
             font-family: Arial, sans-serif;
@@ -29,13 +28,13 @@
         nav ul li a {
             text-decoration: none;
             color: #333;
-        }
-        .gallery img {
+     }
+     .gallery img {
             width: 100%;
             max-width: 300px;
             height: auto;
             margin-bottom: 20px;
-        }
+     }
     </style>
 </head>
 <body>
@@ -76,12 +75,11 @@
                 <img src="10.jpeg" alt="Image 10">
                 <img src="11.jpeg" alt="Image 11">
                 <img src="12.jpeg" alt="Image 12">
-
             </div>
         </section>
         <section id="blog">
             <div class="centered-text">
-            <h2>Blog<br>ㅤ</h2>
+                <h2>Blog<br>ㅤ</h2>
             </div>
             <article>
                 <h3>First Article</h3>
@@ -126,5 +124,7 @@
             </html>
         </section>
     </main>
+    <script src="script.js"></script>
+    <button onclick="toggleDarkMode()">dark mode</button>
 </body>
 </html>
